# dicom-parse

./: README.md  dicom-parse.cabal  stack.yaml
src/Data/DICOM/: Parse.hs
