name:                dicom-parse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/danplubell/dicom-parse#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.DICOM.Parse
  build-depends:       base >= 4.7 && < 5
                     , dicom-model
                     , dicom-dictionary
                     , binary
                     , bytestring
                     , text
                     , monad-loops
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/danplubell/dicom-parse
